--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -1536,13 +1536,7 @@
       "779/804 [============================>.] - ETA: 0s - loss: 0.5393 - accuracy: 0.7399\n",
       "Epoch 34: saving model to checkpoints/weights.34.hdf5\n",
       "804/804 [==============================] - 1s 2ms/step - loss: 0.5400 - accuracy: 0.7391\n",
-      "Epoch 35/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 35/100\n",
       "784/804 [============================>.] - ETA: 0s - loss: 0.5405 - accuracy: 0.7388\n",
       "Epoch 35: saving model to checkpoints/weights.35.hdf5\n",
       "804/804 [==============================] - 1s 2ms/step - loss: 0.5400 - accuracy: 0.7394\n",
